@@ -13,6 +13,7 @@ import com.newfit.reservation.domain.routine.EquipmentRoutine;
 import com.newfit.reservation.dto.request.ReservationRequest;
 import com.newfit.reservation.dto.request.ReservationUpdateRequest;
 import com.newfit.reservation.dto.response.*;
+import com.newfit.reservation.exception.CustomException;
 import com.newfit.reservation.repository.AuthorityRepository;
 import com.newfit.reservation.repository.CreditRepository;
 import com.newfit.reservation.repository.equipment.EquipmentGymRepository;
@@ -25,9 +26,9 @@ import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
+
 import static java.time.LocalDateTime.*;
+import static com.newfit.reservation.exception.ErrorCode.*;
 
 @Service
 @RequiredArgsConstructor
@@ -41,49 +42,53 @@ public class ReservationService {
     private final CreditRepository creditRepository;
 
 
-    public ReservationResponse reserve(Long authorityId,
-                                       Long equipmentId,
-                                       ReservationRequest request) {
-
-        validateReservationIn2Hours(request.getStartAt(), request.getEndAt());
+    public void reserve(Long authorityId,
+                        Long equipmentId,
+                        ReservationRequest request) {
 
         Authority authority = authorityRepository.findById(authorityId)
-                .orElseThrow(IllegalArgumentException::new);
+                .orElseThrow(() -> new CustomException(AUTHORITY_NOT_FOUND));
+
+        validateLastTagAt(authority);
+        validateReservationIn2Hours(request.getStartAt(), request.getEndAt());
 
         checkBusinessHour(request.getStartAt(), request.getEndAt(), authority);
 
         // 사용 가능한 기구 하나를 가져옴
         EquipmentGym usedEquipment = getOneAvailable(equipmentId, request.getStartAt(), request.getEndAt());
 
-        Reservation reservation = Reservation.create(authority, usedEquipment, request);
-        reservationRepository.save(reservation);
 
-        return new ReservationResponse(reservation.getId());
+        Reservation reservation = Reservation.create(authority, usedEquipment, request.getStartAt(), request.getEndAt(), request.getRepetitionNumber());
+
+        reservationRepository.save(reservation);
+    }
+
+    private void validateLastTagAt(Authority authority) {
+        LocalDateTime tagAt = authority.getTagAt();
+        if (tagAt.isBefore(now().minusHours(2)))
+            throw new CustomException(EXPIRED_TAG);
     }
 
 
     @Transactional(readOnly = true)
     public ReservationListResponse listReservation(Long equipmentGymId) {
         EquipmentGym equipmentGym = equipmentGymRepository.findById(equipmentGymId)
-                .orElseThrow(IllegalArgumentException::new);
+                .orElseThrow(() -> new CustomException(EQUIPMENT_GYM_NOT_FOUND));
 
         String gymName = equipmentGym.getGym().getName();
 
         List<ReservationDetailResponse> reservationDetailResponseList =
                 reservationRepository.findAllByEquipmentGym(equipmentGym)
                         .stream()
-                        .map(ReservationDetailResponse::new)
-                        .toList();
+                        .map(ReservationDetailResponse::new).toList();
 
-        return ReservationListResponse.builder()
-                .gymName(gymName)
-                .reservationResponseList(reservationDetailResponseList)
-                .build();
+        return ReservationListResponse.createResponse(gymName, reservationDetailResponseList);
     }
 
-    public ReservationResponse update(Long reservationId, ReservationUpdateRequest request) {
-        Reservation targetReservation = reservationRepository.findById(reservationId)
-                .orElseThrow(IllegalArgumentException::new);
+    public void update(Long reservationId, ReservationUpdateRequest request) {
+        Reservation targetReservation = findById(reservationId);
+
+        validateLastTagAt(targetReservation.getAuthority());
 
         // 예약 세트 횟수 변경
         if (request.getRepetitionNumber() != null) {
@@ -108,7 +113,6 @@ public class ReservationService {
                     getOneAvailable(targetEquipmentId, request.getStartAt(), request.getEndAt());
             targetReservation.updateEquipmentGym(anotherEquipmentGym);
         }
-        return new ReservationResponse(reservationId);
     }
 
     public void delete(Long reservationId) {
@@ -122,9 +126,8 @@ public class ReservationService {
 
         // reservations에서 현재 시간보다 늦게 끝나거나 현재 시간으로부터 2시간 이후내로 시작되는 예약을 OccupiedTime 리스트로 변환
         List<OccupiedTime> occupiedTimes = reservations.stream()
-                .filter(reservation -> reservation.getEnd_at().isAfter(now) || reservation.getStart_at().isBefore(now.plusHours(2)))
-                .map(reservation -> new OccupiedTime(reservation.getStart_at(), reservation.getEnd_at()))
-                .collect(Collectors.toList());
+                .filter(reservation -> reservation.getEndAt().isAfter(now) || reservation.getStartAt().isBefore(now.plusHours(2)))
+                .map(reservation -> new OccupiedTime(reservation.getStartAt(), reservation.getEndAt())).toList();
 
         return new EquipmentInfoResponse(equipmentGym, occupiedTimes);
     }
@@ -150,29 +153,23 @@ public class ReservationService {
 
     public Reservation findById(Long reservationId) {
         return reservationRepository.findById(reservationId)
-                .orElseThrow(IllegalArgumentException::new);
+                .orElseThrow(() -> new CustomException(RESERVATION_NOT_FOUND));
     }
 
     // 루틴의 특정 기구를 예약
     private RoutineReservationResponse reserveOneInRoutine(Long authorityId, Long equipmentId, LocalDateTime startAt, LocalDateTime endAt) {
         Authority authority = authorityRepository.findById(authorityId)
-                .orElseThrow(IllegalArgumentException::new);
+                .orElseThrow(() -> new CustomException(AUTHORITY_NOT_FOUND));
         EquipmentGym equipmentGym = null;
 
         int attempt = 0;
         while (attempt != 5) {
             try {
                 equipmentGym = getOneAvailable(equipmentId, startAt, endAt);
-                Reservation reservation = Reservation.builder()
-                        .authority(authority)
-                        .equipmentGym(equipmentGym)
-                        .startAt(startAt)
-                        .endAt(endAt)
-                        .repetitionNumber(0L)
-                        .build();
+                Reservation reservation = Reservation.create(authority, equipmentGym, startAt, endAt, 0L);
                 reservationRepository.save(reservation);
                 return new RoutineReservationResponse(equipmentGym.getId(), true, startAt);
-            } catch (NoSuchElementException exception) {
+            } catch (CustomException exception) { // getOneAvailable()에서 발생하는 예외
                 startAt = startAt.plusMinutes(1);
                 endAt = endAt.plusMinutes(1);
                 attempt += 1;
@@ -188,7 +185,7 @@ public class ReservationService {
                 .filter(equipmentGym ->
                         validateReservationOverlap(equipmentGym, startAt, endAt))
                 .findAny()
-                .orElseThrow(() -> new NoSuchElementException("There is no available equipment"));
+                .orElseThrow(() -> new CustomException(EQUIPMENT_GYM_NOT_FOUND, "예약 가능한 기구가 없습니다."));
     }
 
     private void checkBusinessHour(LocalDateTime startAt, LocalDateTime endAt, Authority authority) {
@@ -198,7 +195,7 @@ public class ReservationService {
          exception이 발생 안하면 예약 시작 시간이 종료 시간보다 선행됨을 보장
          */
         if (startAt.isAfter(endAt))
-            throw new IllegalArgumentException("잘못된 예약 요청입니다.");
+            throw new CustomException(INVALID_RESERVATION_REQUEST);
 
         Gym gym = authority.getGym();
         BusinessTime businessTime = gym.getBusinessTime();
@@ -224,7 +221,7 @@ public class ReservationService {
                 checkEndAtInBusinessHour(endAt, gymOpenHour, gymCloseHour, businessTime);
 
         if (!result)
-            throw new IllegalArgumentException("헬스장 운영 시간을 준수하지 않는 예약 요청입니다.");
+            throw new CustomException(INVALID_RESERVATION_REQUEST, "요청이 헬스장 운영 시간과 맞지 않습니다.");
     }
 
     private boolean checkEndAtInBusinessHour(LocalDateTime endAt, int gymOpenHour, int gymCloseHour,
@@ -277,15 +274,15 @@ public class ReservationService {
         if (checkConditions(reservation, endEquipmentUseAt)) {
             if (authority.getCreditAcquisitionCount() != 10) {
                 Credit credit = creditRepository.findByAuthorityAndYearAndMonth(authority, (short) now.getYear(), (short) now.getMonthValue())
-                        .orElseThrow(IllegalArgumentException::new);
+                        .orElseThrow(() -> new CustomException(CREDIT_NOT_FOUND));
                 credit.addAmount();
                 authority.incrementAcquisitionCount();
                 authority.getUser().addBalance(100L);
             } else {
-                throw new IllegalArgumentException("일일 크레딧 획득량을 모두 채웠습니다");
+                throw new CustomException(MAXIMUM_CREDIT_LIMIT);
             }
         } else {
-            throw new IllegalArgumentException("정상적인 기구 사용이 아니므로 크레딧 획득에 실패했습니다.");
+            throw new CustomException(INVALID_CREDIT_ACQUIRE_REQUEST, "크레딧 획득에 실패했습니다.");
         }
     }
 
@@ -299,13 +296,13 @@ public class ReservationService {
     }
 
     private boolean isStartTagInTime(Reservation reservation) {
-        return (reservation.getStartTagAt().isBefore(reservation.getStart_at().plusMinutes(5)) && reservation.getStartTagAt().isAfter(reservation.getStart_at()))
-                || reservation.getStartTagAt().isEqual(reservation.getStart_at().plusMinutes(5));
+        return (reservation.getStartTagAt().isBefore(reservation.getStartAt().plusMinutes(5)) && reservation.getStartTagAt().isAfter(reservation.getStartAt()))
+                || reservation.getStartTagAt().isEqual(reservation.getStartAt().plusMinutes(5));
     }
 
     private boolean isEndTagInTime(Reservation reservation, LocalDateTime endTagAt) {
-        return (endTagAt.isBefore(reservation.getEnd_at().plusMinutes(5)) && endTagAt.isAfter(reservation.getEnd_at()))
-                || endTagAt.isEqual(reservation.getEnd_at().plusMinutes(5));
+        return (endTagAt.isBefore(reservation.getEndAt().plusMinutes(5)) && endTagAt.isAfter(reservation.getEndAt()))
+                || endTagAt.isEqual(reservation.getEndAt().plusMinutes(5));
     }
 
     private void validateReservationIn2Hours(LocalDateTime startAt, LocalDateTime endAt) {
@@ -316,11 +313,11 @@ public class ReservationService {
         LocalDateTime twoHourLater = now().plusHours(MAX_HOUR_TERM);
 
         if (startAt.isAfter(twoHourLater)) {
-            throw new IllegalArgumentException("예약 시작 시간을 확인해주세요.");
+            throw new CustomException(INVALID_RESERVATION_REQUEST, "예약 시작 시간을 확인해주세요.");
         }
 
         if (endAt.isAfter(twoHourLater.plusMinutes(MAX_MINUTE))) {
-            throw new IllegalArgumentException("예약 종료 시간을 확인해주세요.");
+            throw new CustomException(INVALID_RESERVATION_REQUEST, "예약 종료 시간을 확인해주세요.");
         }
     }
 
@@ -342,27 +339,32 @@ public class ReservationService {
     }
 
     public void startUse(Long authorityId, Long equipmentGymId, LocalDateTime tagAt) {
-        validateTagAt(tagAt);
-        updateStartTagAtAndStatus(authorityId, equipmentGymId, tagAt);
+
+        Authority authority = authorityRepository.findById(authorityId).orElseThrow(() -> new CustomException(AUTHORITY_NOT_FOUND));
+        EquipmentGym equipmentGym = equipmentGymRepository.findById(equipmentGymId).orElseThrow(() -> new CustomException(EQUIPMENT_GYM_NOT_FOUND));
+        Reservation reservation = reservationRepository.findByAuthorityAndEquipmentGym(authority, equipmentGym).orElseThrow(() -> new CustomException(RESERVATION_NOT_FOUND));
+
+        validateTagAt(tagAt, reservation.getStartAt()); // 요청 시각과 현재 시각을 비교
+
+        updateReservation(reservation, tagAt);
+        equipmentGym.updateCondition(Condition.OCCUPIED);
+        authority.updateTagAt(tagAt);
     }
 
-    private void updateStartTagAtAndStatus(Long authorityId, Long equipmentGymId, LocalDateTime tagAt) {
-        EquipmentGym equipmentGym = equipmentGymRepository.findById(equipmentGymId).orElseThrow(IllegalArgumentException::new);
-        Reservation reservation = findReservationByAuthorityAndEquipmentGym(authorityId, equipmentGym);
-
+    private void updateReservation(Reservation reservation, LocalDateTime tagAt) {
         reservation.updateStartTagAt(tagAt);
         reservation.updateStatus(Status.PROCESSING);
-        equipmentGym.updateCondition(Condition.OCCUPIED);
     }
 
-    private Reservation findReservationByAuthorityAndEquipmentGym(Long authorityId, EquipmentGym equipmentGym) {
-        Authority authority = authorityRepository.findById(authorityId).orElseThrow(IllegalArgumentException::new);
-        return reservationRepository.findByAuthorityAndEquipmentGym(authority, equipmentGym).orElseThrow(IllegalArgumentException::new);
-    }
 
-    private void validateTagAt(LocalDateTime tagAt) {
+    private void validateTagAt(LocalDateTime tagAt, LocalDateTime reservationStartAt) {
+        // TODO: 시간은 기배님의 의견에 따라 결정
         if (tagAt.isBefore(now().minusMinutes(3))) {
-            throw new IllegalArgumentException("can't update past reservation's startTagAt");
+            throw new CustomException(INVALID_TAG_REQUEST, "요청 시각이 현재 시간과 맞지 않습니다.");
+        }
+
+        if (tagAt.isBefore(reservationStartAt.minusMinutes(3))) {
+            throw new CustomException(INVALID_TAG_REQUEST, "예약 시작 3분 전에 태그할 수 있습니다.");
         }
     }
 }
